@@ -1,3 +1,8 @@
+25
+
+* GTK3 port by Ignacio Rodriguez
+* Fix problem with preview image
+
 24.3
 
 * New Sugar-compliant icon
